gccida/c3/adjust_address_1
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2439:36: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  adjust_address_1( rtx memref, machine_mode mode, __int64 offset, int validate, int adjust) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2444:4: error: expected ';' after expression
rtx v13; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2444:5: error: use of undeclared identifier 'v13'
rtx v13; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2445:4: error: expected ';' after expression
rtx v14; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2445:5: error: use of undeclared identifier 'v14'
rtx v14; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2446:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2447:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2449:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2450:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2450:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2451:4: error: expected ';' after expression
rtx v20; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2451:5: error: use of undeclared identifier 'v20'
rtx v20; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2453:4: error: expected ';' after expression
rtx v22; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2453:5: error: use of undeclared identifier 'v22'
rtx v22; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2459:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2459:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2471:1: error: use of undeclared identifier '_OWORD'
_OWORD *v40; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2471:9: error: use of undeclared identifier 'v40'; did you mean 'v30'?
_OWORD *v40; // rax 
        ^~~
        v30
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2461:9: note: 'v30' declared here
__int64 v30; // rcx 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/emit-rtl.c:2475:4: error: expected ';' after expression
rtx v45; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/adjust_address_1/src/obj/emit-rtl.o] Error 1
